# Employee-register

./: Administrator.cpp  Administrator.h  Analityk.cpp  Analityk.h  Aplikacja.cpp  Aplikacja.h  CMakeLists.txt  Firma.cpp  Firma.h  Ksiegowy.cpp  Ksiegowy.h  Pracownik.cpp  Pracownik.h  Programista.cpp  Programista.h  RodzajUmowy.h  Stazysta.cpp  Stazysta.h  Wyjatki.h  main.cpp  stdin.txt  temat1.txt
