cmake_minimum_required(VERSION 3.20)
project(JalochaKamila-etap2)

set(CMAKE_CXX_STANDARD 14)

add_executable(JalochaKamila-etap2 main.cpp Pracownik.cpp Pracownik.h Firma.cpp Firma.h Aplikacja.cpp Aplikacja.h Stazysta.cpp Stazysta.h RodzajUmowy.h Administrator.cpp Administrator.h Programista.cpp Programista.h Analityk.cpp Analityk.h Ksiegowy.cpp Ksiegowy.h Wyjatki.h)
